[tool.poetry]
name = "uniflow"
version = "0.0.7"
description = "Unified flow interface for synthetic data generation and many more"
authors = ["CambioML <wanwanaiai45@gmail.com>"]
maintainers = ["Rachel Hu <goldpiggy@berkeley.edu>"]
license = "Apache License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
spacy = "3.7.0"
pandas = "2.0.3"
clean-text = "0.6.0"
python-dotenv = "1.0.0"
lmqg = "0.1.1"
openai = "0.28.1"
graphviz = "0.20.1"
langchain = "0.0.319"
unstructured = "0.10.24"
peft = "0.5.0"
pypdf = "3.17.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
