[tool.poetry]
name = "uniflow"
version = "0.0.14"
description = "Unified interface for pre-training data augmentation and post-training evaluation of Large Language Models (LLMs)."
authors = ["CambioML <wanwanaiai45@gmail.com>"]
maintainers = ["Rachel Hu <goldpiggy@berkeley.edu>"]
license = "Apache License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
python-dotenv = "^1.0.0"
openai = "^1.2.4"
graphviz = "^0.20.1"
pydantic = "^2.5.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
